[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdnl_microglia"
version = "0.1"
authors = [
  { name="Noah Capp", email="noahmcapp@gmail.com" },
]
description = "PDNL Microglia Segmentation"
dependencies = [
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/PennCompPathology/pdnl_microglia"

[project.scripts]
pdnl_microglia = "pdnl_microglia:main"
